# pygeist

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: tests.yml  workflow.yml
adapters/include/server/: api_handler.h  classes.h  config.h  const.h  endpoint.h  exceptions.h  helpers.h  response.h  sessions.h
adapters/src/server/: api_handler.c  classes.c  const.c  endpoint.c  exceptions.c  helpers.c  master.c  response.c  sessions.c
examples/basic/: intro.py
pygeist/: __init__.py  __main__.py  cli.py  dependency.py  exceptions.py  main.py  request.py  router.py  server.py  sessions.py  testclient.py  zeitgeist.py
pygeist/abstract/: dependency.py  request.py
pygeist/concurrency/: helpers.py  multiprocess.py  queue.py
pygeist/utils/: signature.py  singleton.py
tests/fixtures/: routed.py  socket.py
tests/fixtures/app_examples/: __init__.py  basic.py  modeled.py  sessioned.py
tests/server/: test_adapters.py  test_args.py
tests/server/adapters/: test_const.py  test_exceptions.py
tests/server/socket/: test_raw.py  test_raw_async.py
tests/server/testclient/: test_async.py  test_base.py  test_dependencies.py  test_info_retriever.py  test_pydantic.py  test_query_params.py  test_sessions.py  test_testclient_usage.py
tests/server/utils/: test_signature.py  test_singleton.py
zeitgeist_server/: _zeitgeist.py  api.py  exceptions.py  request.py  router.py  server.py  zeitgeist.py
zeitgeist_server/abstract/: api.py  idleness_handler.py
zeitgeist_server/concurrency/: helpers.py
zeitgeist_server/utils/: singleton.py
(+2 files in other folders)
